# mimi

./: .gitignore  README.md  index.html  index.php
c/: CMakeLists.txt  mt4sim.cxx
c/harstripper/: CMakeLists.txt  harstripper.cxx
json/: amostra_auth_falha.json  amostra_auth_sucesso.json
metatrader4/: Retorno.mq4  Retorno_v2_2.mq4
python/: mt4-watchdog.py  mt4dog.py
testes/: CMakeLists.txt  analise_deriv.txt  cmike.cxx  mt4sim.cxx  trafego_websockets_deriv.json
testes/csv/: sinais.csv
web/: index-element.html  index.html
